--- a/templates/success.html
+++ b/templates/success.html
@@ -2,16 +2,47 @@
 {% block title %}Success{% endblock %}
 
 {% block content %}
-    {% if value==1 %}
+    {% if username %}
         <section class="hero is-info">
             <div class="hero-body field">
-                <h1 class="has-text-centered title">WELCOME!</h1>
+                <div class="columns">
+                    <div class="column">
+                        <figure class="image is-128x128 is-centered">
+                            <img src="https://bulma.io/images/placeholders/128x128.png">
+                        </figure>
+                    </div>
+                    <div class="column">
+                        <h1 class="has-text-centered title is-5">Welcome back, {{ email }}</h1> 
+                        <p class="help">You are currently logged in.</p>                   
+                    </div>
+                </div>
+                <p class="subtitle"><b>Profile Details</b> 
+                    <br><br> Name: {{ email }} <br> Password: {{ password }}</p>
             </div>
         </section><br>
-        <form action="/loginForm" method="GET">
-            <div class="control has-text-centered">  
-                <button class="button is-light">LOGOUT</button>
+    {% elif not username %}
+    <section class="hero is-info">
+            <div class="hero-body field">
+                <div class="columns">
+                    <div class="column">
+                        <figure class="image is-128x128 is-centered">
+                            <img src="https://bulma.io/images/placeholders/128x128.png">
+                        </figure>
+                    </div>
+                    <div class="column">
+                        <h1 class="has-text-centered title is-5">Welcome to this WEBSITE.</h1> 
+                        <p class="help">You are currently logged in.</p>                   
+                    </div>
+                </div>
+                <p class="subtitle"><b>Profile Details</b> 
+                    <br><br> Name: {{ email }} <br> Password: {{ password }}</p>
             </div>
-        </form>
+        </section><br>
+        
     {% endif %}
+    <form action="/logout" method="GET">
+        <div class="control has-text-right">  
+            <button class="button is-primary">LOGOUT</button>
+        </div>
+    </form>
 {% endblock %}
